Archive2/b2/0e2ff904dee970/output
main.cpp:15:12: error: no matching constructor for initialization of 'Machin'
    Machin m;
           ^
main.cpp:5:3: note: candidate constructor not viable: requires single argument 'a', but no arguments were provided
  Machin(int a) : a(a){
  ^
main.cpp:3:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
class Machin{
      ^
main.cpp:3:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided
main.cpp:10:8: warning: private field 'a' is not used [-Wunused-private-field]
  int  a;
       ^
1 warning and 1 error generated.
